# tmuxui

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.local/: .crates.toml  .crates2.json
src/: app.rs  main.rs  models.rs  tmux.rs  ui.rs
