[package]
name = "tmuxui"
version = "0.4.0"
edition = "2021"
description = "Terminal UI for browsing and managing tmux sessions, windows, and panes"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["tmux", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
